src/test/deca/context/valid/readInt.deca
// Description:
//    utilisation de readInt
//
// Resultats:
//    
//
// Historique:
//    cree le 06/01/2023

{
    readInt();
}